# apple-libtapi

./: .travis.yml  README.md  VERSION.txt  build.sh  install.sh
src/: libtapi
src/apple-llvm/: ClangBNI.mk  Makefile  clang.1  clang.plist
src/apple-llvm/buildbot-order-files/: README.txt
src/apple-llvm/ci/: files.list
src/apple-llvm/order-files/: README.txt  commands.py  gen-clang-order-data  gen-order-file
src/apple-llvm/order-files/inputs/: 403.gcc__combine.c  Cocoa_Prefix.h  JavaScriptCore__Interpreter.cpp  OmniGroupFrameworks__NSBezierPath-OAExtensions.m  trivial-input.c  trivial-input.cpp  trivial-input.m
src/apple-llvm/src/: CMakeLists.txt  Makefile
src/apple-llvm/src/docs/: conf.py
src/apple-llvm/src/lib/: CMakeLists.txt
src/apple-llvm/src/tools/: CMakeLists.txt
src/apple-llvm/src/tools/api-analyzer/: CMakeLists.txt  Project.mk  api-analyzer.cpp  build_api_analyzer
src/apple-llvm/src/tools/api-analyzer/APIAnalysis/: APIAnalysis.cpp  APIAnalysisImpl.h  ArchiveAnalyzer.cpp  ArchiveAnalyzer.h  BinaryAnalyzer.cpp  BinaryAnalyzer.h  CMakeLists.txt  ModuleAnalyzer.cpp  ModuleAnalyzer.h  ObjCStructs.h  XarAnalyzer.cpp  XarAnalyzer.h
src/apple-llvm/src/tools/api-analyzer/APIAnalysis/include/llvm/: APIAnalysis.h
src/apple-llvm/static-order-files/: armv7k
src/apple-llvm/static-order-files/armv7/: clang.order
src/apple-llvm/static-order-files/i386/: clang.order
src/apple-llvm/static-order-files/x86_64/: clang.order
src/clang/: CMakeLists.txt
src/clang/lib/CodeGen/: BackendUtil.cpp
src/clang/lib/Sema/: SemaDeclAttr.cpp
src/clang/tools/: CMakeLists.txt
src/llvm/: CMakeLists.txt
src/llvm/include/clang/: Makefile  cmake_install.cmake
src/llvm/lib/CodeGen/: CommandFlags.cpp
src/llvm/lib/DWARFLinker/: DWARFLinker.cpp
src/llvm/lib/Support/: LockFileManager.cpp  raw_ostream.cpp
src/llvm/projects/clang/: CMakeLists.txt
src/llvm/projects/libtapi/: CMakeLists.txt  Readme.md
src/llvm/projects/libtapi/docs/man/: CMakeLists.txt  tapi-archive.1  tapi-installapi.1
src/llvm/projects/libtapi/test/Inputs/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/ABrokenSymlink/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/ArchDiff/: CMakeLists.txt  arch-diff.c  arch-diff.h
src/llvm/projects/libtapi/test/Inputs/AvailabilityTest/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/Bundle/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/CPP1/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/CPP2/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/CPP3/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/CPP4/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/CodeCoverage/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/Dummy/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/Export/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/FooLib/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/FragileObjCABI/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/IVarExtensionTest/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/IVarTest/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/Inlining/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/Inlining/Bar/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/Inlining/Foo/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/InstallName/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/Mod/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/Mod2/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/Public/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/Reexport/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/Reexport/SourceLib/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/ReexportAll/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/ReexportAll/SourceLib/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/Simple/: Basic.h  CMakeLists.txt  Simple.m
src/llvm/projects/libtapi/test/Inputs/SpecialLinkerSymbols/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/SubFramework/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/SubFrameworks/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/SymlinkTest/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/TapiDefine/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/Umbrella1/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/Umbrella2/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/Umbrella3/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/Umbrella3/Reexports/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/UmbrellaCC/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/UmbrellaCC/Reexports/: CMakeLists.txt
src/llvm/projects/libtapi/test/Inputs/UsrLib/: CMakeLists.txt  test.c  test.h
src/llvm/projects/libtapi/test/Inputs/Xarch/: CMakeLists.txt  Xarch.c
src/llvm/projects/libtapi/test/Inputs/asm/: CMakeLists.txt
src/llvm/projects/libtapi/tools/tapi/: CMakeLists.txt  tapi.exports
src/llvm/projects/libtapi/tools/tapi-run/: CMakeLists.txt  tapi-run.cpp
src/llvm/tools/llvm-objdump/: MachODump.cpp
src/llvm/tools/llvm-readobj/: MachODumper.cpp
src/quirks/: std_map_emplace.h
src/tapi/: .clang-tidy  CMakeLists.txt  Readme.md
src/tapi/cmake/caches/: apple-tapi-R.cmake  apple-tapi.cmake  tapi-defaults.cmake
src/tapi/docs/: FileList.rst  SDKDB.rst  SDKDBBitcodeFormat.rst  TBD_current.rst  TBD_legacy.rst  index.rst
src/tapi/docs/man/: CMakeLists.txt  tapi-api-verify.1  tapi-sdkdb.1
src/tapi/include/: CMakeLists.txt
src/tapi/include/tapi/: CMakeLists.txt  LinkerInterfaceFile.h
src/tapi/lib/: CMakeLists.txt
src/tapi/lib/Config/: Version.cpp
src/tapi/lib/Core/: API.cpp  APIJSONSerializer.cpp  AvailabilityInfo.cpp  CMakeLists.txt  ClangDiagnostics.cpp  FakeSymbols.cpp  (+16 more)
src/tapi/tools/: CMakeLists.txt
src/tapi/tools/tapi/: CMakeLists.txt
src/tapi/tools/tapi-sdkdb/: CMakeLists.txt  tapi-sdkdb.cpp
src/tapi/utils/: compare_sdkdb.py  extract_sdkdb_diag.py  run_sdkdb_test  tapi-parse-diagnostics-file  textify_sdk
tools/: tools.sh
(+475 files in other folders)
