cmake_minimum_required(VERSION 3.4.3)

MESSAGE(STATUS "CMAKE_BUILD_TYPE: " ${CMAKE_BUILD_TYPE})

SET(CMAKE_SKIP_BUILD_RPATH  TRUE)
SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)

add_subdirectory(ABrokenSymlink)
add_subdirectory(ArchDiff)
add_subdirectory(asm)
add_subdirectory(AvailabilityTest)
add_subdirectory(Bundle)
add_subdirectory(CodeCoverage)
add_subdirectory(CPP1)
add_subdirectory(CPP2)
add_subdirectory(CPP3)
add_subdirectory(CPP4)
add_subdirectory(Dummy)
add_subdirectory(Export)
add_subdirectory(FooLib)
add_subdirectory(FragileObjCABI)
add_subdirectory(Inlining)
add_subdirectory(InstallName)
add_subdirectory(IVarTest)
add_subdirectory(IVarExtensionTest)
add_subdirectory(Mod)
add_subdirectory(Mod2)
add_subdirectory(Public)
add_subdirectory(TapiDefine)
add_subdirectory(Simple)
add_subdirectory(SpecialLinkerSymbols)
add_subdirectory(SubFramework)
add_subdirectory(SubFrameworks)
add_subdirectory(SymlinkTest)
add_subdirectory(Reexport)
add_subdirectory(ReexportAll)
add_subdirectory(Umbrella1)
add_subdirectory(Umbrella2)
add_subdirectory(Umbrella3)
add_subdirectory(UmbrellaCC)
add_subdirectory(UsrLib)
add_subdirectory(Xarch)
